tdf#104729 FILESAVE Save author name in comment during export to .xlsx

Change-Id: I59d46f6a713e4f252844cda0f631ace239d73cdb
Reviewed-on: https://gerrit.libreoffice.org/32115
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 36cdf3c35459df63ce137e550a6840a61865c0ca)